--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,8 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src='https://cdn.firebase.com/v0/firebase.js'></script>
+        <script src="bower_components/angular-fire/angularfire.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
