--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,16 @@
     </script>
 
 
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="//code.angularjs.org/1.2.0-rc.3/angular.js"></script>
+    <script src="//code.angularjs.org/1.2.0-rc.3/angular-route.js"></script>
+    <script src="//code.angularjs.org/1.2.0-rc.3/angular-cookies.js"></script>
+    <script src="//code.angularjs.org/1.2.0-rc.3/angular-sanitize.js"></script>
+    <script src="//code.angularjs.org/1.2.0-rc.3/angular-resource.js"></script>
+
+
 
         <!-- build:js scripts/modules.js -->
-        <script src="bower_components/angular-resource/angular-resource.js"></script>
-        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-        <script src='https://cdn.firebase.com/v0/firebase.js'></script>
+        <script src='//cdn.firebase.com/v0/firebase.js'></script>
         <script src="bower_components/angular-fire/angularfire.min.js"></script>
         <!-- endbuild -->
 
