--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
         <script src="libs/angular-google-maps.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/map.js"></script>
         <!-- endbuild -->
 </body>
 </html>
