--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
         <script src="scripts/controllers/user.js"></script>
         <script src="scripts/controllers/poi.js"></script>
         <script src="scripts/controllers/map.js"></script>
+        <script src="scripts/services/paypal.js"></script>
         <!-- endbuild -->
 </body>
 </html>
