added new geo dependencies to index

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,9 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="libs/angular-google-maps.js"></script>
+        <script src="libs/geo/geo.js"></script>
+        <script src="libs/geo/mitribu_geo.js"></script>
+        <script src="libs/geo/geo_position_js_simulator.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/tribe.js"></script>
